--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "debug": "node --nolazy --inspect-brk=9229 server.js"
   },
   "author": "",
   "license": "ISC",
