--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.4",
     "angular-messages": "^1.6.6",
+    "angular-nvd3": "^1.0.9",
     "angular-route": "^1.6.5",
     "angular-ui-router": "^1.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
-    "d3": "^5.4.0",
+    "d3": "^3.5.6",
     "express": "^4.14.0",
     "jquery": "^3.2.1",
     "mongoose": "^5.1.4",
