--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.5",
-    "angular": "^1.6.4",
-    "angular-animate": "^1.6.4",
-    "angular-aria": "^1.6.4",
-    "angular-material": "^1.1.4",
-    "angular-messages": "^1.6.6",
+    "angular": "1.6.4",
+    "angular-animate": "1.6.4",
+    "angular-aria": "1.6.4",
+    "angular-material": "1.1.4",
+    "angular-messages": "1.6.4",
     "angular-nvd3": "^1.0.9",
-    "angular-route": "^1.6.5",
+    "angular-route": "1.6.4",
     "angular-ui-router": "^1.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
