--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3": "^3.5.6",
     "express": "^4.14.0",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.4",
     "multer": "^1.3.0",
     "ng-file-upload": "^12.2.13",
