--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.1.4",
     "multer": "^1.3.0",
     "ng-file-upload": "^12.2.13",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "twit": "^2.2.10"
   },
   "devDependencies": {},
   "scripts": {
