--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.5",
-    "angular": "^1.6.4",
-    "angular-animate": "^1.6.4",
-    "angular-aria": "^1.6.4",
-    "angular-material": "^1.1.4",
-    "angular-messages": "^1.6.6",
+    "angular": "^1.6.10",
+    "angular-animate": "^1.6.10",
+    "angular-aria": "^1.6.10",
+    "angular-material": "^1.1.9",
+    "angular-messages": "^1.6.10",
     "angular-route": "^1.6.5",
     "angular-ui-router": "^1.0.3",
     "body-parser": "^1.17.2",
@@ -17,6 +17,7 @@
     "d3": "^5.4.0",
     "express": "^4.14.0",
     "jquery": "^3.2.1",
+    "mdi": "^2.2.43",
     "mongoose": "^5.1.4",
     "multer": "^1.3.0",
     "ng-file-upload": "^12.2.13",
