--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "server.js",
   "dependencies": {
     "@uirouter/angularjs": "^1.0.5",
-    "angular": "^1.6.10",
-    "angular-animate": "^1.6.10",
-    "angular-aria": "^1.6.10",
-    "angular-material": "^1.1.9",
-    "angular-messages": "^1.6.10",
-    "angular-route": "^1.6.5",
+    "angular": "1.6.4",
+    "angular-animate": "1.6.4",
+    "angular-aria": "1.6.4",
+    "angular-material": "1.1.4",
+    "angular-messages": "1.6.4",
+    "angular-nvd3": "^1.0.9",
+    "angular-route": "1.6.4",
     "angular-ui-router": "^1.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "d3": "^3.5.6",
     "express": "^4.14.0",
     "jquery": "^3.2.1",
-    "mdi": "^2.2.43",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.4",
     "multer": "^1.3.0",
     "ng-file-upload": "^12.2.13",
